<resources>
    <string name="app_name">Kev Recipes</string>

    <!-- Activities-->
    <string name="title_activity_add_recipe">AddRecipeActivity</string>
    <string name="title_activity_ingredients_instructions">IngredientsInstructionsActivity</string>

    <!-- MainActivity -->
    <string name="welcome_title">RecipeDex</string>
    <string name="welcome_subtitle">Gotta\r\nCook\'em\r\nAll!</string>
    <string name="action_settings">Settings</string>
    <string name="button_view_recipes">View Recipes</string>
    <string name="button_add_recipe">Add Recipe</string>

    <!-- AddRecipeActivity -->
    <string name="recipe_name">Recipe Name</string>
    <string name="add_recipe_message">Add a new recipe</string>
    <string name="source">"Source: "</string>
    <string-array name="source_array">
        <item>Website</item>
        <item>Person</item>
        <item>Book</item>
        <item>Unknown/Other</item>
    </string-array>

    <!-- AddRecipeActivity sources -->
    <string name="website_name">Site Name</string>
    <string name="website_url">URL</string>
    <string name="book_name">Book Name</string>
    <string name="author">Author</string>
    <string name="page_number">Page Number</string>
    <string name="person_name">Name</string>

    <!-- InputIngredientsInstructions sources -->
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="continue_button">Continue</string>
    <string name="title_activity_confirmation">ConfirmationActivity</string>

    <string name="confirm_button">Confirm</string>
</resources>
