<RelativeLayout
    android:id="@+id/add_recipe"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.kev.kevrecipes.AddRecipeActivity">

    <TextView
        android:id="@+id/add_recipe_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="36sp"
        android:text="@string/add_recipe_message"/>

    <EditText android:id="@+id/recipe_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/recipe_name"
        android:inputType="text"
        android:layout_below="@+id/add_recipe_welcome"/>

    <TextView
        android:id="@+id/source_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/recipe_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/source"/>

    <com.kev.kevrecipes.NoDefaultSpinner
        android:id="@+id/source_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/recipe_name"
        android:layout_toRightOf="@id/source_message"
        android:layout_toEndOf="@id/source_message" />

    <LinearLayout
        android:id="@+id/hidden_source"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/source_spinner">
    </LinearLayout>

</RelativeLayout>
