<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.kev.kevrecipes.ConfirmationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/confirmation_recipe_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="24sp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/confirmation_source_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/source"/>

            <TextView
                android:id="@+id/confirmation_source"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/confirmation_source_desc"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/confirmation_website_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="0px"/>

        <TextView
            android:id="@+id/confirmation_website_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="0px"/>

        <TextView
            android:id="@+id/confirmation_book_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="0px"/>

        <TextView
            android:id="@+id/confirmation_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="0px"/>

        <TextView
            android:id="@+id/confirmation_page_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="0px"/>

        <TextView
            android:id="@+id/confirmation_person_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="0px"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingredients"/>

        <TextView
            android:id="@+id/confirmation_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instructions"/>

        <TextView
            android:id="@+id/confirmation_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_button"
        android:id="@+id/confirmButton"
        android:onClick="confirm"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>
